--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,4 +9,20 @@
 
 - name: Mount hgfs shared folders
   become: true
-  command: mount -t fuse.vmhgfs-fuse .host:/ /mnt/hgfs -o allow_other
+  mount:
+    fstype: fuse.vmhgfs-fuse
+    path: /mnt/hgfs
+    src: .host:/
+    state: mounted
+    opts: allow_other
+
+  #- name: Mount hgfs shared folders
+  #  become: true
+  #  command: mount -t fuse.vmhgfs-fuse .host:/ /mnt/hgfs -o allow_other
+  #
+  #- name: Add mount to fstab
+  #  become: true
+  #  lineinfile:
+  #    path: /etc/fstab
+  #    regexp: 'vmhgfs-fuse'
+  #    line: '.host:/ /mnt/hgfs fuse.vmhgfs-fuse allow_other 0 0'
